[package]
name = "mq"
version = "0.1.0"
edition = "2021"
[dependencies]
minicbor = { version = "0.20.0", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
[[bin]]
name = "mq"
path = "src/bin/mq/main.rs"
[[bin]]
name = "pub"
path = "src/bin/pub/main.rs"
[[bin]]
name = "sub"
path = "src/bin/sub/main.rs"
