[package]
name = "mq"
version = "0.1.0"
edition = "2021"
[dependencies]
bincode = "1.3.3"
tokio = { version = "1.35.1", features = ["full"] }
serde = "1.0"
serde_derive = "1.0"
memmap2 = "0.9.4"

[[bin]]
name = "mq"
path = "src/bin/mq/main.rs"
[[bin]]
name = "pub"
path = "src/bin/pub/main.rs"
[[bin]]
name = "sub"
path = "src/bin/sub/main.rs"
