[package]
name = "mq"
version = "0.1.0"
edition = "2021"
[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
memmap2 = "0.9.4"
tracing = "0.1.40"
tracing-subscriber ="0.3.18"
[[bin]]
name = "mq"
path = "src/bin/mq/main.rs"
[[bin]]
name = "pub"
path = "src/bin/pub/main.rs"
[[bin]]
name = "sub"
path = "src/bin/sub/main.rs"
